# genetic-programming-lab

./: README.md
ga-lab/: pyproject.toml  requirements.txt
ga-lab/notes/: chromosome-representations.md  crossover-methods.md
ga-lab/src/ga_lab/crossover/: __init__.py  base.py  k_point.py  single_point.py  two_point.py
ga-lab/src/ga_lab/mutation/: bit_flip.py
ga-lab/tests/: conftest.py
ga-lab/tests/crossover/: test_k_point.py  test_single_point.py  test_two_point.py
ga-lab/tests/mutation/: test_bit_flip.py
